--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <li>basic metal works course</li>
     <li>course for vehicles of internal transportation</li>
   </ul>
-  <a href="hobbies.html">My hobbies</a>
-  <a href="my pictures.html"> my pictures</a>
+  <hr/>
+  <a href="hobbies.html">My hobbies</a><br>
+  <a href="my pictures.html"> my pictures</a><br>
   <a href="contact me.html">contact me</a>
   <hr />
   <h3>Work Ekspirience</h3>
