--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <li>course for vehicles of internal transportation</li>
   </ul>
   <hr/>
-  <a href="hobbies.html">My hobbies</a><br>
-  <a href="my pictures.html"> my pictures</a><br>
+  <a href="hobbies.html">My hobbies</a><br/>
+  <a href="my pictures.html"> my pictures</a><br/>
   <a href="contact me.html">contact me</a>
   <hr />
   <h3>Work Ekspirience</h3>
