--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <li>course for vehicles of internal transportation</li>
   </ul>
   <hr/>
-  <a href="hobbies.html">My hobbies</a><br/>
-  <a href="my pictures.html"> my pictures</a><br/>
+  <or>
+   <li><a href="hobbies.html">My hobbies</a><br/></li>
+   <li><a href="my pictures.html"> my pictures</a><br/></li>
+  </or>
   <a href="contact me.html">contact me</a>
   <hr />
   <h3>Work Ekspirience</h3>
