--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   <ol>
    <li><a href="hobbies.html">My hobbies</a><br/></li>
    <li><a href="my pictures.html"> my pictures</a><br/></li>
+    <li><a href="contact me.html">contact me</a></li>
   </ol>
-  <a href="contact me.html">contact me</a>
+  
   <hr />
   <h3>Work Ekspirience</h3>
   <hr />
