--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="" alt="my picture"></td>
+      <td><img src="https://github.com/stivitu/mysite/blob/master/pictures/stiven1.png.jpg" alt="my picture"></td>
       <td>
         <h1>Stjepan Tušek</h1>
         <p><em>Web developer, <br /> <strong>potential</strong><a href="http://csprog.net/whps/php/novosti.php"> bee keeper,</a> <br />amateur astronomer and bowyer</em></p>
