--- a/my pictures.html
+++ b/my pictures.html
@@ -5,14 +5,14 @@
     <title>my pictures</title>
   </head>
   <body>
-    <img src="ham.png.jpg">
-  <img src="me.png.JPG" >   <img src="kalnik.png.jpg"><br />
+    <img src="pictures/ham.png.jpg">
+  <img src="pictures/me.png.JPG" >   <img src="pictures/kalnik.png.jpg"><br />
 <p><strong>1.Ivanchica complex,the top is in mist 2.Somewhere on Klek
    3.Old fortress,Kalnik</strong></p><br />
-   <img src="baba.png.jpg"  /> <img src="giant.png.jpg" />  <img src="foot.png.jpg" /><br />
+   <img src="pictures/baba.png.jpg"  /> <img src="pictures/giant.png.jpg" />  <img src="pictures/foot.png.jpg" /><br />
    <p><strong>1.Monolite Baba,Ogulin,Croatia 2.Mountain Klek,from Ogulin(a sleeping giant)
       3.Foot of the sleeping giant from the top</strong></p><br />
-      <img src="drvo.png.jpg" /> <img src="archer.png.jpg" /> <img src="painter.png.jpg" /><br />
+      <img src="pictures/drvo.png.jpg" /> <img src="pictures/archer.png.jpg" /> <img src="pictures/painter.png.jpg" /><br />
       <p><strong>1.Ambush on Kalnik 2.My first bow 3.Somewhere in time</strong></p>
     </body>
     </html>
