--- a/contact me.html
+++ b/contact me.html
@@ -7,14 +7,14 @@
   <body>
   <p>stjepant@net.hr</p>
   
-    <form action="mailto:stivi.gallagher@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:stjepant@net.hr" method="post" enctype="text/plain">
      <label>Your Name</label>
      <input type="text" name="Your Name" value=""><br>
      <label>Your e-mail</label>
      <input type="email" name="Your e-mail" value=""><br>
      <label>Your Message</label><br>
      <textarea name="Your Message" rows="15" cols="40"></textarea><br>
-     <input type="submit" name="">
+     <input type="submit" name="" value="submit">
 
    </form>
  </body>
