--- a/contact me.html
+++ b/contact me.html
@@ -7,7 +7,7 @@
   <body>
   <p>stjepant@net.hr</p>
   
-    <form action="mailto:stjepant@net.hr" method="post" enctype="text/plain">
+    <form action="mailto:stivi.gallagher@gmail.com" method="post" enctype="text/plain">
      <label>Your Name</label>
      <input type="text" name="Your Name" value=""><br>
      <label>Your e-mail</label>
