--- a/contact me.html
+++ b/contact me.html
@@ -5,7 +5,7 @@
     <title>contact me</title>
   </head>
   <body>
-  <p>stjepant@net.hr</p>
+  <p>marko.bero@gmail.com</p>
   
     <form action="mailto:stivi.gallagher@gmail.com" method="post" enctype="text/plain">
      <label>Your Name</label>
