--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>😎Steve's Personal Site</title>
+    <style>
+    body{background-color: #CFF6CF}
+    hr  {background-color: white;
+         border-style: none;
+         height: 3px;}
+  </style>
 </head>
 
 <body>
