--- a/my pictures.html
+++ b/my pictures.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>my pictures</title>
   </head>
-  <body>
+  <body style="background-color: #E5CFE5;">
     <img src="pictures/ham.png.jpg">
   <img src="pictures/me.png.JPG" >   <img src="pictures/kalnik.png.jpg"><br />
 <p><strong>1.Ivanchica complex,the top is in mist 2.Somewhere on Klek
