--- a/contact me.html
+++ b/contact me.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>contact me</title>
   </head>
-  <body>
+  <body style="background-color: #E5CFE5;">
   <p>marko.bero@gmail.com</p>
   
     <form action="mailto:stivi.gallagher@gmail.com" method="post" enctype="text/plain">
