--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,7 @@
   <title>My hobbies</title>
 </head>
 
-<body>
+<body style="background-color: #CFF6CF;">
   <h3>My Hobbies</h3>
   <ol>
     <li>painting</li>
