--- a/my pictures.html
+++ b/my pictures.html
@@ -5,8 +5,7 @@
     <title>my pictures</title>
   </head>
   <body style="background-color: #E5CFE5;">
-    <img src="pictures/ham.png.jpg">
-  <img src="pictures/me.png.JPG" >   <img src="pictures/kalnik.png.jpg"><br />
+    <img src="pictures/ham.png.jpg"> <img src="pictures/me.png.JPG" ><img src="pictures/kalnik.png.jpg"><br />
 <p><strong>1.Ivanchica complex,the top is in mist 2.Somewhere on Klek
    3.Old fortress,Kalnik</strong></p><br />
    <img src="pictures/baba.png.jpg"  /> <img src="pictures/giant.png.jpg" />  <img src="pictures/foot.png.jpg" /><br />
@@ -15,4 +14,5 @@
       <img src="pictures/drvo.png.jpg" /> <img src="pictures/archer.png.jpg" /> <img src="pictures/painter.png.jpg" /><br />
       <p><strong>1.Ambush on Kalnik 2.My first bow 3.Somewhere in time</strong></p>
     </body>
-    </html>
+    </html> 
+
