--- a/my pictures.html
+++ b/my pictures.html
@@ -5,7 +5,7 @@
     <title>my pictures</title>
   </head>
   <body style="background-color: #E5CFE5;">
-    <img src="pictures/ham.png.jpg"> <img src="pictures/me.png.JPG" ><img src="pictures/kalnik.png.jpg"><br />
+    <img src="pictures/ham.png.jpg"> <img src="me.png.JPG" ><img src="pictures/kalnik.png.jpg"><br />
 <p><strong>1.Ivanchica complex,the top is in mist 2.Somewhere on Klek
    3.Old fortress,Kalnik</strong></p><br />
    <img src="pictures/baba.png.jpg"  /> <img src="pictures/giant.png.jpg" />  <img src="pictures/foot.png.jpg" /><br />
