--- a/contact me.html
+++ b/contact me.html
@@ -5,7 +5,7 @@
     <title>contact me</title>
   </head>
   <body style="background-color: #E5CFE5;">
-  <p>marko.bero@gmail.com</p>
+  <p>stjepant@net.hr</p>
   
     <form action="mailto:stivi.gallagher@gmail.com" method="post" enctype="text/plain">
      <label>Your Name</label>
@@ -14,7 +14,7 @@
      <input type="email" name="Your e-mail" value=""><br>
      <label>Your Message</label><br>
      <textarea name="Your Message" rows="15" cols="40"></textarea><br>
-     <input type="submit" name="" value="submit">
+     <input type="submit" name="" value="">
 
    </form>
  </body>
