--- a/contact me.html
+++ b/contact me.html
@@ -14,7 +14,7 @@
      <input type="email" name="Your e-mail" value=""><br>
      <label>Your Message</label><br>
      <textarea name="Your Message" rows="15" cols="40"></textarea><br>
-     <input type="submit" name="" value="">
+     <input type="submit" name="">
 
    </form>
  </body>
