--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>My hobbies</title>
+  <style>
+  hr {background-color: none;
+  border-style: dotted none none;
+  border-color:  #66BFBF;height: 0px;width: 175px;
+  border-width: 5px;
+
+
+      }
+  </style>
 </head>
 
 <body style="background-color: #CFF6CF;">
