--- a/contact me.html
+++ b/contact me.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>contact me</title>
+    <style>
+  hr {background-color: none;
+  border-style: dotted none none;
+  border-color:  #66BFBF;height: 0px;width: 175px;
+  border-width: 5px;
+
+
+      }
+  </style>
   </head>
   <body style="background-color: #E5CFE5;">
   <p>stjepant@net.hr</p>
