--- a/contact me.html
+++ b/contact me.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>contact me</title>
     <style>
-  hr {background-color: none;
+  hr {background-color: #E5CFE5;
   border-style: dotted none none;
-  border-color:  #66BFBF;height: 0px;width: 175px;
+  border-color:  #66BFBF;height: 0px;width: 320px;
   border-width: 5px;
 
 
