--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>My hobbies</title>
   <style>
-  hr {background-color: none;
+  hr {background-color: #CFF6CF;
   border-style: dotted none none;
   border-color:  #66BFBF;height: 0px;width: 175px;
   border-width: 5px;
