--- a/hobbies.html
+++ b/hobbies.html
@@ -17,7 +17,7 @@
 
 <body style="background-color: #CFF6CF;">
   <h3>My Hobbies</h3>
-  <hr>
+  <hr align=left>
   <ol>
     <li>painting</li>
     <li><a href="https://planinarenje.hr/odredista/ivanscica"> mountaineering</a></li>
