--- a/contact me.html
+++ b/contact me.html
@@ -15,7 +15,7 @@
   </head>
   <body style="background-color: #E5CFE5;">
   <p>stjepant@net.hr</p>
-    <hr>
+    <hr align=left>
   
     <form action="mailto:stivi.gallagher@gmail.com" method="post" enctype="text/plain">
      <label>Your Name</label>
